releases/1.47.0/README.md
# Backstage Release 1.47.0

## Compared to 1.46.7 (previous minor release)

2 added, 0 removed, 109 upgraded, 81 unchanged.

⚠️ Need extra attention: 7 0.x minor, 2 0.0.x patch.

### 🆕 Added packages

| Package | Version |
| --- | --- |
| `@backstage/plugin-app-react` | 0.1.0 |
| `@backstage/plugin-devtools-react` | 0.1.0 |

### ⬆️ Version bumps

| Package | 1.46.7 | 1.47.0 | Type |
| --- | --- | --- | --- |
| `@backstage/app-defaults` | 1.7.3 | 1.7.4 | Patch |
| `@backstage/backend-app-api` | 1.4.0 | 1.4.1 | Patch |
| `@backstage/backend-defaults` | 0.14.2 | 0.15.0 | Minor ⚠️ |
| `@backstage/backend-dynamic-feature-service` | 0.7.7 | 0.7.8 | Patch |
| `@backstage/backend-openapi-utils` | 0.6.4 | 0.6.5 | Patch |
| `@backstage/backend-plugin-api` | 1.6.0 | 1.6.1 | Patch |
| `@backstage/backend-test-utils` | 1.10.2 | 1.10.3 | Patch |
| `@backstage/cli` | 0.35.1 | 0.35.2 | Patch |
| `@backstage/cli-common` | 0.1.16 | 0.1.17 | Patch |
| `@backstage/core-compat-api` | 0.5.5 | 0.5.6 | Patch |
| `@backstage/core-components` | 0.18.4 | 0.18.5 | Patch |
| `@backstage/create-app` | 0.7.7 | 0.7.8 | Patch |
| `@backstage/dev-utils` | 1.1.18 | 1.1.19 | Patch |
| `@backstage/frontend-app-api` | 0.13.3 | 0.14.0 | Minor ⚠️ |
| `@backstage/frontend-defaults` | 0.3.4 | 0.3.5 | Patch |
| `@backstage/frontend-plugin-api` | 0.13.2 | 0.13.3 | Patch |
| `@backstage/frontend-test-utils` | 0.4.2 | 0.4.3 | Patch |
| `@backstage/integration` | 1.19.1 | 1.19.2 | Patch |
| `@backstage/integration-react` | 1.2.13 | 1.2.14 | Patch |
| `@backstage/plugin-api-docs` | 0.13.2 | 0.13.3 | Patch |
| `@backstage/plugin-app` | 0.3.3 | 0.3.4 | Patch |
| `@backstage/plugin-app-backend` | 0.5.9 | 0.5.10 | Patch |
| `@backstage/plugin-app-node` | 0.1.40 | 0.1.41 | Patch |
| `@backstage/plugin-auth` | 0.1.3 | 0.1.4 | Patch |
| `@backstage/plugin-auth-backend` | 0.25.7 | 0.26.0 | Minor ⚠️ |
| `@backstage/plugin-auth-backend-module-aws-alb-provider` | 0.4.10 | 0.4.11 | Patch |
| `@backstage/plugin-auth-backend-module-oidc-provider` | 0.4.10 | 0.4.11 | Patch |
| `@backstage/plugin-auth-node` | 0.6.10 | 0.6.11 | Patch |
| `@backstage/plugin-auth-react` | 0.1.22 | 0.1.23 | Patch |
| `@backstage/plugin-bitbucket-cloud-common` | 0.3.5 | 0.3.6 | Patch |
| `@backstage/plugin-catalog` | 1.32.1 | 1.32.2 | Patch |
| `@backstage/plugin-catalog-backend` | 3.3.0 | 3.3.1 | Patch |
| `@backstage/plugin-catalog-backend-module-aws` | 0.4.18 | 0.4.19 | Patch |
| `@backstage/plugin-catalog-backend-module-azure` | 0.3.12 | 0.3.13 | Patch |
| `@backstage/plugin-catalog-backend-module-backstage-openapi` | 0.5.9 | 0.5.10 | Patch |
| `@backstage/plugin-catalog-backend-module-bitbucket-cloud` | 0.5.6 | 0.5.7 | Patch |
| `@backstage/plugin-catalog-backend-module-bitbucket-server` | 0.5.6 | 0.5.7 | Patch |
| `@backstage/plugin-catalog-backend-module-gerrit` | 0.3.9 | 0.3.10 | Patch |
| `@backstage/plugin-catalog-backend-module-gitea` | 0.1.7 | 0.1.8 | Patch |
| `@backstage/plugin-catalog-backend-module-github` | 0.12.0 | 0.12.1 | Patch |
| `@backstage/plugin-catalog-backend-module-github-org` | 0.3.17 | 0.3.18 | Patch |
| `@backstage/plugin-catalog-backend-module-gitlab` | 0.7.6 | 0.7.7 | Patch |
| `@backstage/plugin-catalog-backend-module-gitlab-org` | 0.2.16 | 0.2.17 | Patch |
| `@backstage/plugin-catalog-backend-module-incremental-ingestion` | 0.7.7 | 0.7.8 | Patch |
| `@backstage/plugin-catalog-backend-module-logs` | 0.1.17 | 0.1.18 | Patch |
| `@backstage/plugin-catalog-backend-module-msgraph` | 0.8.3 | 0.8.4 | Patch |
| `@backstage/plugin-catalog-backend-module-openapi` | 0.2.17 | 0.2.18 | Patch |
| `@backstage/plugin-catalog-backend-module-puppetdb` | 0.2.17 | 0.2.18 | Patch |
| `@backstage/plugin-catalog-backend-module-scaffolder-entity-model` | 0.2.15 | 0.2.16 | Patch |
| `@backstage/plugin-catalog-graph` | 0.5.5 | 0.5.6 | Patch |
| `@backstage/plugin-catalog-import` | 0.13.8 | 0.13.9 | Patch |
| `@backstage/plugin-catalog-react` | 1.21.4 | 1.21.5 | Patch |
| `@backstage/plugin-catalog-unprocessed-entities` | 0.2.24 | 0.2.25 | Patch |
| `@backstage/plugin-config-schema` | 0.1.75 | 0.1.76 | Patch |
| `@backstage/plugin-devtools` | 0.1.34 | 0.1.35 | Patch |
| `@backstage/plugin-devtools-backend` | 0.5.12 | 0.5.13 | Patch |
| `@backstage/plugin-devtools-common` | 0.1.20 | 0.1.21 | Patch |
| `@backstage/plugin-events-backend` | 0.5.9 | 0.5.10 | Patch |
| `@backstage/plugin-events-backend-module-github` | 0.4.7 | 0.4.8 | Patch |
| `@backstage/plugin-events-backend-module-kafka` | 0.2.0 | 0.3.0 | Minor ⚠️ |
| `@backstage/plugin-home` | 0.8.15 | 0.9.0 | Minor ⚠️ |
| `@backstage/plugin-home-react` | 0.1.33 | 0.1.34 | Patch |
| `@backstage/plugin-kubernetes` | 0.12.14 | 0.12.15 | Patch |
| `@backstage/plugin-kubernetes-cluster` | 0.0.32 | 0.0.33 | Patch ⚠️ |
| `@backstage/plugin-kubernetes-react` | 0.5.14 | 0.5.15 | Patch |
| `@backstage/plugin-mcp-actions-backend` | 0.1.6 | 0.1.7 | Patch |
| `@backstage/plugin-mui-to-bui` | 0.2.2 | 0.2.3 | Patch |
| `@backstage/plugin-notifications` | 0.5.12 | 0.5.13 | Patch |
| `@backstage/plugin-org` | 0.6.47 | 0.6.48 | Patch |
| `@backstage/plugin-org-react` | 0.1.45 | 0.1.46 | Patch |
| `@backstage/plugin-permission-common` | 0.9.3 | 0.9.4 | Patch |
| `@backstage/plugin-permission-node` | 0.10.7 | 0.10.8 | Patch |
| `@backstage/plugin-scaffolder` | 1.35.0 | 1.35.1 | Patch |
| `@backstage/plugin-scaffolder-backend` | 3.1.0 | 3.1.1 | Patch |
| `@backstage/plugin-scaffolder-backend-module-azure` | 0.2.16 | 0.2.17 | Patch |
| `@backstage/plugin-scaffolder-backend-module-bitbucket` | 0.3.17 | 0.3.18 | Patch |
| `@backstage/plugin-scaffolder-backend-module-bitbucket-cloud` | 0.3.0 | 0.3.1 | Patch |
| `@backstage/plugin-scaffolder-backend-module-bitbucket-server` | 0.2.16 | 0.2.17 | Patch |
| `@backstage/plugin-scaffolder-backend-module-confluence-to-markdown` | 0.3.16 | 0.3.17 | Patch |
| `@backstage/plugin-scaffolder-backend-module-cookiecutter` | 0.3.18 | 0.3.19 | Patch |
| `@backstage/plugin-scaffolder-backend-module-gcp` | 0.2.16 | 0.2.17 | Patch |
| `@backstage/plugin-scaffolder-backend-module-gerrit` | 0.2.16 | 0.2.17 | Patch |
| `@backstage/plugin-scaffolder-backend-module-gitea` | 0.2.16 | 0.2.17 | Patch |
| `@backstage/plugin-scaffolder-backend-module-github` | 0.9.3 | 0.9.4 | Patch |
| `@backstage/plugin-scaffolder-backend-module-gitlab` | 0.11.0 | 0.11.1 | Patch |
| `@backstage/plugin-scaffolder-backend-module-notifications` | 0.1.17 | 0.1.18 | Patch |
| `@backstage/plugin-scaffolder-backend-module-rails` | 0.5.16 | 0.5.17 | Patch |
| `@backstage/plugin-scaffolder-backend-module-sentry` | 0.2.16 | 0.3.0 | Minor ⚠️ |
| `@backstage/plugin-scaffolder-backend-module-yeoman` | 0.4.17 | 0.4.18 | Patch |
| `@backstage/plugin-scaffolder-common` | 1.7.4 | 1.7.5 | Patch |
| `@backstage/plugin-scaffolder-node` | 0.12.2 | 0.12.3 | Patch |
| `@backstage/plugin-scaffolder-node-test-utils` | 0.3.6 | 0.3.7 | Patch |
| `@backstage/plugin-scaffolder-react` | 1.19.4 | 1.19.5 | Patch |
| `@backstage/plugin-search` | 1.5.2 | 1.5.3 | Patch |
| `@backstage/plugin-search-backend` | 2.0.9 | 2.0.10 | Patch |
| `@backstage/plugin-search-backend-module-techdocs` | 0.4.9 | 0.4.10 | Patch |
| `@backstage/plugin-search-react` | 1.10.1 | 1.10.2 | Patch |
| `@backstage/plugin-signals` | 0.0.26 | 0.0.27 | Patch ⚠️ |
| `@backstage/plugin-techdocs` | 1.16.1 | 1.16.2 | Patch |
| `@backstage/plugin-techdocs-addons-test-utils` | 2.0.0 | 2.0.1 | Patch |
| `@backstage/plugin-techdocs-backend` | 2.1.3 | 2.1.4 | Patch |
| `@backstage/plugin-techdocs-module-addons-contrib` | 1.1.31 | 1.1.32 | Patch |
| `@backstage/plugin-techdocs-node` | 1.13.11 | 1.14.0 | Minor |
| `@backstage/plugin-techdocs-react` | 1.3.6 | 1.3.7 | Patch |
| `@backstage/plugin-user-settings` | 0.8.30 | 0.8.31 | Patch |
| `@backstage/plugin-user-settings-backend` | 0.3.9 | 0.3.10 | Patch |
| `@backstage/repo-tools` | 0.16.1 | 0.16.2 | Patch |
| `@backstage/ui` | 0.10.1 | 0.11.0 | Minor ⚠️ |
| `@techdocs/cli` | 1.10.3 | 1.10.4 | Patch |
